--- a/src/components/Timer.css
+++ b/src/components/Timer.css
@@ -2,4 +2,8 @@
   position: absolute;
   bottom: 0;
   right: 0;
+  background-color: white;
+  padding-left: 10px;
+  
+  border: 1px solid black;
 }
